# chatprj

./: .env  .swp  CMakeLists.txt  Dockerfile  alternative_realisations  application.cpp  application.hpp  async_tcp_echo_server.cpp  async_tcp_echo_server.hpp  blocking_tcp_echo_client.cpp  blocking_tcp_echo_client.hpp  blocking_tcp_echo_server.cpp  blocking_tcp_echo_server.hpp  chat_client.cpp  chat_client.hpp  chat_server.cpp  chat_server.hpp  compose.yaml  constants.hpp  copy_sql_scripts_to_build_directories.py  data.cpp  data.hpp  db_interaction.cpp  db_interaction.hpp  graphic_manager.cpp  icmp_header.hpp  ipv4_header.hpp  logging.cpp  logging.hpp  main.cpp  mainwindow.cpp  mainwindow.hpp  manager.cpp  manager.hpp  message.cpp  tutorial_boost_asio.cpp  tutorial_boost_asio.hpp  utils.cpp  utils.hpp  utils_cout.cpp  (+7 more)
app/: CMakeLists.txt  main.cpp
config/: .env
docker/: Dockerfile  compose.yaml
include/: action.hpp  application.hpp  chat_client.hpp  chat_server.hpp  companion.hpp  constants.hpp  data.hpp  db_interaction.hpp  file_info.hpp  graphic_manager.hpp  logging.hpp  mainwindow.hpp  manager.hpp  message.hpp  utils.hpp  utils_cout.hpp  utils_gpgme.hpp  utils_measurement.hpp  utils_widgets.hpp  widgets.hpp  widgets_dialog.hpp  widgets_message.hpp  widgets_panel.hpp
scripts/: copy_sql_scripts_to_build_directories.py
scripts/sql_scripts/: sql_script_1_configure_db.sql
scripts/sql_scripts/client1_db/: sql_script_2_create_data_client1_db.sql
sql_scripts/: sql_script_1_configure_db.sql
sql_scripts/client1_db/: sql_script_2_create_data_client1_db.sql
sql_scripts/client2_db/: sql_script_2_create_data_client2_db.sql
sql_scripts/client3_db/: sql_script_2_create_data_client3_db.sql
src/: CMakeLists.txt  action.cpp  application.cpp  chat_client.cpp  chat_server.cpp  companion.cpp  data.cpp  db_interaction.cpp  file_info.cpp  graphic_manager.cpp  logging.cpp  mainwindow.cpp  manager.cpp  message.cpp  utils.cpp  utils_cout.cpp  utils_gpgme.cpp  utils_measurement.cpp  utils_widgets.cpp  widgets.cpp  widgets_dialog.cpp  widgets_message.cpp  widgets_panel.cpp
